<?xml version="1.0"?>
<package format="2">
  <name>shop_tools</name>
  <version>0.0.0</version>
  <description>The shop_tools package</description>
  <license>BSD</license>

  <maintainer email="nqq0915@163.com">nqq09</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>urdf</build_depend>
  <build_depend>xacro</build_depend>
  <build_export_depend>urdf</build_export_depend>
  <build_export_depend>xacro</build_export_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>

  </export>
</package>
