<?xml version="1.0"?>
<package format="2">
  <name>shop_pid</name>
  <version>0.0.0</version>
  <description>The shop_pid package</description>

  <maintainer email="nqq09@163.com">nqq09</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>dynamic_reconfigure</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  
  <export>
  </export>
</package>
