<?xml version="1.0"?>
<package format="2">
  <name>imu_calib</name>
  <version>0.0.0</version>
  <description>The imu_calib package</description>

  <maintainer email="nqq0915@163.com">nqq09</maintainer>

  <license>shoprobot imu calib by itself</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>shop_msgs</build_depend>
  <build_export_depend>cmake_modules</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>shop_msgs</build_export_depend>
  <exec_depend>cmake_modules</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>shop_msgs</exec_depend>

  <export>

  </export>
</package>
