<?xml version="1.0"?>
<package format="2">
  <name>mcu_serial</name>
  <version>0.0.0</version>
  <description>The mcu_serial package</description>

  <maintainer email="nqq0915@163.com">nqq09</maintainer>

  <license>BCD</license>


  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>common</build_depend>
  <build_depend>data</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>serial</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>common</build_export_depend>
  <build_export_depend>data</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>serial</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>common</exec_depend>
  <exec_depend>data</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>serial</exec_depend>
  <exec_depend>std_msgs</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
