<?xml version="1.0"?>
<package format="2">
  <name>local_path_planing</name>
  <version>0.0.0</version>
  <description>The local_path_planing package</description>

  <maintainer email="nqq0915@163.com">nqq09</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>data</build_depend>
  <build_depend>common</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>atcionlib</build_depend>
  <build_export_depend>data</build_export_depend>
  <build_export_depend>common</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>atcionlib</build_export_depend>
  <exec_depend>data</exec_depend>
  <exec_depend>common</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>atcionlib</exec_depend>

  <export>

  </export>
</package>
