<?xml version="1.0"?>
<package format="2">
  <name>config_xml</name>
  <version>0.0.0</version>
  <description>The config_xml package</description>

  <maintainer email="nqq0915@163.com">nqq09</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cmmon</build_depend>
  <build_depend>data</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>cmmon</build_export_depend>
  <build_export_depend>data</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>cmmon</exec_depend>
  <exec_depend>data</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>


  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
